--- a/Ceriyo.Entities/Ceriyo.Entities.csproj
+++ b/Ceriyo.Entities/Ceriyo.Entities.csproj
@@ -77,6 +77,9 @@
     <Compile Include="Entities\GraphicEntity.cs" />
     <Compile Include="Entities\GUI\Atlas.cs" />
     <Compile Include="Entities\GUI\ChatBox.cs" />
+    <Compile Include="Entities\GUI\Components\LoginMenuUIComponent.cs" />
+    <Compile Include="Entities\GUI\Desktops\BaseDesktop.cs" />
+    <Compile Include="Entities\GUI\Desktops\MainMenuDesktop.cs" />
     <Compile Include="Entities\GUI\FileDialog.cs" />
     <Compile Include="Entities\GUI\GameGui.cs" />
     <Compile Include="Entities\GUI\Gridview\GridColumn.cs" />
@@ -84,7 +87,7 @@
     <Compile Include="Entities\GUI\Gridview\GridViewItem.cs" />
     <Compile Include="Entities\GUI\MessageBox.cs" />
     <Compile Include="Entities\GUI\SampleDesktop.cs" />
-    <Compile Include="Entities\GUI\SampleWindow.cs" />
+    <Compile Include="Entities\GUI\UIWindow.cs" />
     <Compile Include="Entities\GUI\WindowEntity.cs" />
     <Compile Include="Entities\PaintCreatureEntity.cs" />
     <Compile Include="Entities\PaintTileEntity.cs" />
