--- a/Ceriyo.Library/Ceriyo.Library.csproj
+++ b/Ceriyo.Library/Ceriyo.Library.csproj
@@ -99,7 +99,19 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptEngine\ScriptManager.cs" />
     <Compile Include="ScriptEngine\ScriptMethods.cs" />
+    <Compile Include="SquidGUI\Atlas.cs" />
+    <Compile Include="SquidGUI\ChatBox.cs" />
+    <Compile Include="SquidGUI\Components\TitleBarUIComponent.cs" />
+    <Compile Include="SquidGUI\FileDialog.cs" />
+    <Compile Include="SquidGUI\GameGui.cs" />
+    <Compile Include="SquidGUI\Gridview\GridColumn.cs" />
+    <Compile Include="SquidGUI\Gridview\GridView.cs" />
+    <Compile Include="SquidGUI\Gridview\GridViewItem.cs" />
+    <Compile Include="SquidGUI\MessageBox.cs" />
+    <Compile Include="SquidGUI\SquidDesktop.cs" />
+    <Compile Include="SquidGUI\SquidLayoutManager.cs" />
     <Compile Include="SquidGUI\SquidRendererXNA.cs" />
+    <Compile Include="SquidGUI\UIWindow.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ceriyo.Data\Ceriyo.Data.csproj">
@@ -155,12 +167,14 @@
     <Content Include="Content\Data\LevelChart.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Content\GUI\Layouts\LoginMenuLayout.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <Content Include="Content\Tilesets\emptytile.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Content\GUI\" />
     <Folder Include="Content\Icons\" />
     <Folder Include="Content\Settings\" />
   </ItemGroup>
