--- a/Ceriyo.Entities/Ceriyo.Entities.csproj
+++ b/Ceriyo.Entities/Ceriyo.Entities.csproj
@@ -75,7 +75,8 @@
     <Compile Include="Entities\BaseEntity.cs" />
     <Compile Include="Entities\DrawableTile.cs" />
     <Compile Include="Entities\GraphicEntity.cs" />
-    <Compile Include="Entities\MainMenuGUIEntity.cs" />
+    <Compile Include="Entities\GUI\MainMenuGUIEntity.cs" />
+    <Compile Include="Entities\GUI\LoginMenuGUIEntity.cs" />
     <Compile Include="Entities\PaintCreatureEntity.cs" />
     <Compile Include="Entities\PaintTileEntity.cs" />
     <Compile Include="Entities\PlayerEntity.cs" />
