Toolset area loading fixes

--- a/Ceriyo.Data/Ceriyo.Data.csproj
+++ b/Ceriyo.Data/Ceriyo.Data.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Enumerations\ResourceTypeEnum.cs" />
     <Compile Include="Enumerations\ScriptEventTypeEnum.cs" />
     <Compile Include="Enumerations\TileEditModeEnum.cs" />
+    <Compile Include="EventArguments\AreaPropertiesChangedEventArgs.cs" />
     <Compile Include="EventArguments\GameObjectEventArgs.cs" />
     <Compile Include="EventArguments\ConnectionStatusEventArgs.cs" />
     <Compile Include="EventArguments\GameModuleEventArgs.cs" />
