--- a/Ceriyo.Toolset/packages.config
+++ b/Ceriyo.Toolset/packages.config
@@ -3,4 +3,5 @@
   <package id="AvalonEdit" version="4.4.2.9744" targetFramework="net40" />
   <package id="Extended.Wpf.Toolkit" version="2.2.1" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
+  <package id="MUF" version="1.2.1" targetFramework="net40" />
 </packages>
