--- a/Ceriyo.Data/Ceriyo.Data.csproj
+++ b/Ceriyo.Data/Ceriyo.Data.csproj
@@ -113,6 +113,7 @@
     <Compile Include="EventArguments\GameObjectListEventArgs.cs" />
     <Compile Include="EventArguments\ScriptEventArgs.cs" />
     <Compile Include="EventArguments\ObjectPainterEventArgs.cs" />
+    <Compile Include="EventArguments\ServerStatusUpdateEventArgs.cs" />
     <Compile Include="EventArguments\TilePaintEventArgs.cs" />
     <Compile Include="Extensions\SerializableDictionary.cs" />
     <Compile Include="GameObjects\Ability.cs" />
@@ -149,6 +150,8 @@
     <Compile Include="ResourceObjects\ResourceEditorItem.cs" />
     <Compile Include="ResourceObjects\UIComponent.cs" />
     <Compile Include="ResourceObjects\UILayout.cs" />
+    <Compile Include="Server\ServerGameStatus.cs" />
+    <Compile Include="Server\ServerGUIStatus.cs" />
     <Compile Include="Settings\GameSettings.cs" />
     <Compile Include="Settings\ServerSettings.cs" />
     <Compile Include="Settings\ToolsetSettings.cs" />
