--- a/Ceriyo.Server/Ceriyo.Server.csproj
+++ b/Ceriyo.Server/Ceriyo.Server.csproj
@@ -116,7 +116,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="ServerActivityProcessor.cs" />
+    <Compile Include="ServerNetworkManager.cs" />
     <Compile Include="ServerGame.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
