--- a/Ceriyo.Data/Ceriyo.Data.csproj
+++ b/Ceriyo.Data/Ceriyo.Data.csproj
@@ -111,6 +111,7 @@
     <Compile Include="EventArguments\ConnectionStatusEventArgs.cs" />
     <Compile Include="EventArguments\GameModuleEventArgs.cs" />
     <Compile Include="EventArguments\GameObjectListEventArgs.cs" />
+    <Compile Include="EventArguments\PacketEventArgs.cs" />
     <Compile Include="EventArguments\ScriptEventArgs.cs" />
     <Compile Include="EventArguments\ObjectPainterEventArgs.cs" />
     <Compile Include="EventArguments\ServerStatusUpdateEventArgs.cs" />
@@ -144,7 +145,10 @@
     <Compile Include="Engine\ModuleDataManager.cs" />
     <Compile Include="Engine\ModulePaths.cs" />
     <Compile Include="GameObjects\Tileset.cs" />
+    <Compile Include="Packets\UserConnectedPacket.cs" />
     <Compile Include="Packets\PacketBase.cs" />
+    <Compile Include="Packets\UserDisconnectedPacket.cs" />
+    <Compile Include="Packets\UserInfoPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceObjects\GameResource.cs" />
     <Compile Include="ResourceObjects\ResourceEditorItem.cs" />
