Stubbing out character creation menu

--- a/Ceriyo.Library/Ceriyo.Library.csproj
+++ b/Ceriyo.Library/Ceriyo.Library.csproj
@@ -183,6 +183,9 @@
     <Content Include="Content\GUI\Layouts\CharacterSelectionMenu.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\GUI\Layouts\CharacterCreationMenu.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\GUI\Layouts\GameMenu.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
