--- a/Ceriyo.Entities/Ceriyo.Entities.csproj
+++ b/Ceriyo.Entities/Ceriyo.Entities.csproj
@@ -78,6 +78,7 @@
     <Compile Include="DrawableBatches\MapDrawableBatch.cs" />
     <Compile Include="Entities\BaseEntity.cs" />
     <Compile Include="Entities\GraphicEntity.cs" />
+    <Compile Include="GUI\CharacterCreationMenuLogic.cs" />
     <Compile Include="GUI\CharacterSelectionMenuLogic.cs" />
     <Compile Include="GUI\GameMenuLogic.cs" />
     <Compile Include="GUI\MainMenuLogic.cs" />
@@ -88,6 +89,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\AreaEditorScreen.cs" />
     <Compile Include="Screens\BaseScreen.cs" />
+    <Compile Include="Screens\CharacterCreationScreen.cs" />
     <Compile Include="Screens\CharacterSelectionScreen.cs" />
     <Compile Include="Screens\GameScreen.cs" />
     <Compile Include="Screens\MainMenuScreen.cs" />
