--- a/Ceriyo.Data/Ceriyo.Data.csproj
+++ b/Ceriyo.Data/Ceriyo.Data.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Enumerations\ScriptEventTypeEnum.cs" />
     <Compile Include="Enumerations\TileEditModeEnum.cs" />
     <Compile Include="EventArguments\AreaPropertiesChangedEventArgs.cs" />
+    <Compile Include="EventArguments\ResrefEventArgs.cs" />
     <Compile Include="EventArguments\DirectConnectEventArgs.cs" />
     <Compile Include="EventArguments\GameObjectEventArgs.cs" />
     <Compile Include="EventArguments\ConnectionStatusEventArgs.cs" />
@@ -148,6 +149,7 @@
     <Compile Include="Engine\ModulePaths.cs" />
     <Compile Include="GameObjects\Tileset.cs" />
     <Compile Include="Packets\CharacterCreationScreenPacket.cs" />
+    <Compile Include="Packets\CharacterSelectionScreenPacket.cs" />
     <Compile Include="Packets\CreateCharacterPacket.cs" />
     <Compile Include="Packets\DeleteCharacterPacket.cs" />
     <Compile Include="Packets\UserConnectedPacket.cs" />
