--- a/Ceriyo/Ceriyo/Ceriyo.csproj
+++ b/Ceriyo/Ceriyo/Ceriyo.csproj
@@ -39,7 +39,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\x86\Debug\</OutputPath>
+    <OutputPath>..\bin\x86\Debug\</OutputPath>
     <DefineConstants>TRACE;DEBUG;WINDOWS;FRB_XNA; XNA4;XNA4_WINDOWS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
