Toolset class editor stub

--- a/Ceriyo.Data/Ceriyo.Data.csproj
+++ b/Ceriyo.Data/Ceriyo.Data.csproj
@@ -172,6 +172,7 @@
     <Compile Include="ViewModels\AreaSelectionVM.cs" />
     <Compile Include="ViewModels\AreaToolbarVM.cs" />
     <Compile Include="ViewModels\BaseVM.cs" />
+    <Compile Include="ViewModels\ClassEditorVM.cs" />
     <Compile Include="ViewModels\RaceEditorVM.cs" />
     <Compile Include="ViewModels\CreatureEditorVM.cs" />
     <Compile Include="ViewModels\DialogSelectionVM.cs" />
