--- a/Ceriyo/Ceriyo/Ceriyo.csproj
+++ b/Ceriyo/Ceriyo/Ceriyo.csproj
@@ -65,6 +65,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Libraries\Xna4Pc\FlatRedBall.dll</HintPath>
     </Reference>
+    <Reference Include="KeraLua, Version=1.3.1.0, Culture=neutral, PublicKeyToken=04d04586786c6f34, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Libraries\NLua\KeraLua.dll</HintPath>
+    </Reference>
     <Reference Include="Lidgren.Network, Version=2012.1.7.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Libraries\Lidgren\Lidgren.Network.dll</HintPath>
@@ -102,6 +106,10 @@
     <Reference Include="mscorlib">
       <Private>False</Private>
     </Reference>
+    <Reference Include="NLua, Version=1.3.1.0, Culture=neutral, PublicKeyToken=8df2ab518030ea95, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Libraries\NLua\NLua.dll</HintPath>
+    </Reference>
     <Reference Include="Squid, Version=1.0.0.0, Culture=neutral, PublicKeyToken=5ba804b1072f6e05, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Libraries\Squid\Squid.dll</HintPath>
@@ -137,10 +145,11 @@
   <ItemGroup>
     <Content Include="Game.ico" />
     <Content Include="GameThumbnail.png" />
-    <Content Include="Libraries\CSScript\CSScriptLibrary.dll" />
-    <Content Include="Libraries\CSScript\CSScriptLibrary.xml" />
     <Content Include="Libraries\Lidgren\Lidgren.Network.dll" />
     <Content Include="Libraries\Lidgren\Lidgren.Network.pdb" />
+    <Content Include="Libraries\NLua\KeraLua.dll" />
+    <Content Include="Libraries\NLua\lua52.dll" />
+    <Content Include="Libraries\NLua\NLua.dll" />
     <Content Include="Libraries\Squid\MTV3D65.dll" />
     <Content Include="Libraries\Squid\SlimDX.dll" />
     <Content Include="Libraries\Squid\Squid.dll" />
@@ -206,8 +215,11 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>copy "$(SolutionDir)Ceriyo\Ceriyo\Libraries\NLua\lua52.dll" "$(TargetDir)lua52.dll"</PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <!--
       To modify your build process, add your task inside one of the targets below and uncomment it. 
