Hotbar controls enabling/disabling based on module opened/closed and area opened/closed. Also fixed issue where area editor component would not clear out when area was closed.

--- a/Ceriyo.Data/Ceriyo.Data.csproj
+++ b/Ceriyo.Data/Ceriyo.Data.csproj
@@ -201,6 +201,7 @@
     <Compile Include="ViewModels\AreaToolbarVM.cs" />
     <Compile Include="ViewModels\BaseVM.cs" />
     <Compile Include="ViewModels\ClassEditorVM.cs" />
+    <Compile Include="ViewModels\HotBarVM.cs" />
     <Compile Include="ViewModels\MenuBarVM.cs" />
     <Compile Include="ViewModels\SaveModuleVM.cs" />
     <Compile Include="ViewModels\CreatureEditorVM.cs" />
